<resources>
    <string name="app_name">Downloader</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="details">Details</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="caption_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="caption_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="caption_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="caption_custom">Custom:</string>
    <string name="custom_url_hint">URL to download</string>

    <string name="select_file_toast">Please select the file to download</string>
    <string name="invalid_url">Please enter valid url</string>
    <string name="notif_channel_name">Downloader</string>
    <string name="notif_channel_description">Udacity downloader notifications</string>
    <string name="notif_text_downloading">Downloading…</string>
    <string name="notif_text_complete">Download complete</string>
    <string name="file">File</string>
    <string name="url">URL</string>
    <string name="size">Size</string>
    <string name="unknown_size">Unknown</string>
    <string name="status">Status</string>
    <string name="status_success">Success</string>
    <string name="status_fail">Fail</string>
    <string name="open">Open</string>
    <string name="ok_button">OK</string>

</resources>
