<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.downloader.viewmodels.MainViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mail_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:context=".MainActivity"
            tools:showIn="@layout/activity_main">

            <RadioGroup
                android:id="@+id/download_radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:checkedButton="@={viewModel.checkedRadiobuttonId}"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/glide_radio"
                    style="@style/radio_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="16dp"
                    android:text="@string/caption_glide"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/loadapp_radio"
                    style="@style/radio_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="16dp"
                    android:text="@string/caption_loadapp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/glide_radio" />

                <RadioButton
                    android:id="@+id/retrofit_radio"
                    style="@style/radio_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="16dp"
                    android:text="@string/caption_retrofit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loadapp_radio" />

                <RadioButton
                    android:id="@+id/custom_radio"
                    style="@style/radio_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="16dp"
                    android:text="@string/caption_custom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/retrofit_radio" />


            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/custom_url_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:hint="@string/custom_url_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/download_radio_group">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/custom_url_edit"
                    android:text="@={viewModel.customUrl}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>